# Haptic-RW-UAS-Ground-Controller

./: README.md
install/: local_setup.sh  setup.sh
install/bReducedInterfaceModelling/share/bReducedInterfaceModelling/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/b_rim/share/b_rim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bmn/share/bmn/: local_setup.dsv  local_setup.sh  package.bash  (+5 more)
log/: latest_build  latest_list
src/bReducedInterfaceModelling/: CMakeLists.txt  package.xml
src/b_rim/: CMakeLists.txt  package.xml
src/b_rim/src/: brim.cpp
src/bmn/: CMakeLists.txt  package.xml
src/bmn/include/bmn/: bubblemethod.h
src/bmn/src/: bubblemethod.cpp
src/bubbleMethodNavigation/: CMakeLists.txt  package.xml
src/commsMsgs/: CMakeLists.txt  package.xml
src/commsmsgs/: CMakeLists.txt  package.xml
src/commsmsgs/msg/: Bmnpub.msg  Brimpub.msg  Guicontrols.msg  Logctrlbools.msg  Logsetup.msg  Matrixthreef.msg  Num.msg  Rbquadsimpub.msg  Rpicommspub.msg  Rrimpub.msg
src/dataLogging/: CMakeLists.txt
src/dataLogging/src/: RW-UAS_simulation.cpp
src/datalogging/: CMakeLists.txt  package.xml
src/datalogging/src/: logging.cpp
src/rReducedInterfaceModelling/: CMakeLists.txt  package.xml
src/rReducedInterfaceModelling/src/: rpirim.cpp
src/r_rim/: CMakeLists.txt  package.xml
src/r_rim/src/: rpirim.cpp
src/rbQuadSimulation/: CMakeLists.txt
src/rbQuadSimulation/src/: quad_helpers.cpp  rbsystem.cpp
src/rb_quad_sim/: CMakeLists.txt  package.xml
src/rb_quad_sim/src/: CT_path_input.csv  GMT_path_input.csv  quad_helpers.cpp  quadcopter.cpp  rb_helpers.cpp  rbsystem.cpp
src/rpicomms/: CMakeLists.txt  package.xml
src/rpicomms/src/: rpicomms.cpp
src/system_launcher/: package.xml  setup.py
src/system_launcher/config/: bmn.yaml  bmnrim.yaml  logging.yaml  rbsim.yaml  rpicomms.yaml  rpirim.yaml  visuals.yaml
src/system_launcher/launch/: bmn.launch.py  bmnrim.launch.py  launch_gui.launch.py  logging.launch.py  rbsim.launch.py  rpicomms.launch.py  rpirim.launch.py  visuals.launch.py
src/visualizationInputs/: package.xml  setup.cfg  setup.py
src/visualization_inputs/: package.xml  setup.cfg  setup.py
src/visualization_inputs/visualization_inputs/: vis.py
(+143 files in other folders)
